# 3171599-F-ronald-guerrero

./: README.md
week-01/api-saludo/: .env.example  Dockerfile  README.md  docker-compose.yml
week-01/api-saludo/src/: main.py
week-02/3-proyecto/starter/: README.md  __init__.py  database.py  main.py  models.py  requirements.txt  schemas.py  validators.py
week-02/3-proyecto/starter/tests/: test_projects.py
week-03/3-proyecto/: README.md
week-03/3-proyecto/starter/: .dockerignore  database.py  dependencies.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  schemas.py  starter.db
week-03/3-proyecto/starter/models/: project.py  team.py
week-03/3-proyecto/starter/routers/: categories.py  products.py  projects.py  teams.py
week-03/3-proyecto/starter/schemas/: project.py  team.py
week-04/3-proyecto/: README.md
week-04/3-proyecto/starter/: .dockerignore  database.py  exceptions.py  main.py  models.py  pyproject.toml
week-04/3-proyecto/starter/routers/: tasks.py
week-04/3-proyecto/starter/schemas/: __init__.py  request.py  response.py
